test/spec_vectors/simd_bitwise/fail/module_26.wat
(module (func $v128.andnot-arg-empty (result v128) (v128.andnot)))